# alerts

./: README.md
client/: index.html
client/src/: App.jsx  index.css
client/src/components/: AlertTable.jsx
server/: .gcloudignore  .gitignore  Makefile  alert.py  api.py  app-template.yaml  loop.py  main.py  pushover.py  pyproject.toml  requirements.txt  startup.sh  store.py  yahoo.py
server/app_engine_default/: .gcloudignore  .gitignore  app-template.yaml  main.go
server/data/: alerts.json
server/static/: index.html
server/static/assets/: index-DGDahBAA.css  index-KMKBOyve.js
