[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.5",
    "pytz>=2025.2",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.61",
]
